--- a/snoop-world/src/main/resources/application.yml
+++ b/snoop-world/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 snoop:
-   applicationName: snoopydemo
-   applicationHome: http://localhost:8080/snoopy-demo/
+   applicationName: worldsnoop
+   applicationHome: http://localhost:8080/snoop-world-service/
 #   serviceUrl: ws://localhost:8080/snoop-service/
    serviceUrl: ws://192.168.59.103:8081/snoop-service/
 
