--- a/snoop-helloworld/pom.xml
+++ b/snoop-helloworld/pom.xml
@@ -26,14 +26,9 @@
       
       <dependency>
          <groupId>eu.agilejava</groupId>
-         <artifactId>snoop</artifactId>
+         <artifactId>snoop-client</artifactId>
          <version>1.0.0-SNAPSHOT</version>
       </dependency>
-      <dependency>
-         <groupId>eu.agilejava</groupId>
-         <artifactId>snoop-eureka</artifactId>
-         <version>1.0.0-SNAPSHOT</version>
-      </dependency>
-
+     
    </dependencies>
 </project>
