Examples running against docker snoop-service

--- a/snoop-world/src/main/resources/application.yml
+++ b/snoop-world/src/main/resources/application.yml
@@ -2,8 +2,8 @@ snoop:
    applicationName: snoopworld
    applicationHome: http://localhost:8080/snoop-world-service/
    applicationServiceRoot: api
-   serviceUrl: ws://localhost:8080/snoop-service/
-#   serviceUrl: ws://192.168.59.103:8081/snoop-service/
+#   serviceUrl: ws://localhost:8080/snoop-service/
+   serviceUrl: ws://192.168.59.103:8081/snoop-service/
 
 eureka:
   client:
