--- a/snoop-helloworld/pom.xml
+++ b/snoop-helloworld/pom.xml
@@ -27,7 +27,7 @@
       <dependency>
          <groupId>eu.agilejava</groupId>
          <artifactId>snoop-client</artifactId>
-         <version>1.0.0-SNAPSHOT</version>
+         <version>1.0.0</version>
       </dependency>
      
    </dependencies>
