--- a/snoop-world/pom.xml
+++ b/snoop-world/pom.xml
@@ -27,7 +27,7 @@
       <dependency>
          <groupId>eu.agilejava</groupId>
          <artifactId>snoop</artifactId>
-         <version>1.0.0-SNAPSHOT</version>
+         <version>1.0.0</version>
       </dependency>
 
    </dependencies>
