--- a/snoop-hello/pom.xml
+++ b/snoop-hello/pom.xml
@@ -8,6 +8,12 @@
 
    <name>Snoop Hello</name>
 
+   <parent>
+      <groupId>eu.agilejava</groupId>
+      <artifactId>snoop-examples</artifactId>
+      <version>1.0.0-SNAPSHOT</version>
+   </parent>
+   
    <properties>
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
       <maven.compiler.source>1.8</maven.compiler.source>
@@ -27,7 +33,7 @@
       <dependency>
          <groupId>eu.agilejava</groupId>
          <artifactId>snoop</artifactId>
-         <version>1.0.0</version>
+         <version>1.1.0-SNAPSHOT</version>
       </dependency>
 
    </dependencies>
