--- a/snoop-world/src/main/resources/application.yml
+++ b/snoop-world/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 snoop:
-   applicationName: snoopworld
-   applicationHome: http://localhost:8080/snoop-world-service/
-   applicationServiceRoot: api
+   host: http://localhost
+   port: 8080
+   serviceRoot: snoop-world-service/api
 #   serviceHost: localhost:8080/snoop-service/
    serviceHost: 192.168.59.103:8081/snoop-service/
 
