default configuration to run swarm example on port 8093

--- a/snoop-swarm/pom.xml
+++ b/snoop-swarm/pom.xml
@@ -66,6 +66,10 @@
                   </goals>
                </execution>
             </executions>
+            <configuration>
+               <!--<jboss.http.port>8093</jboss.http.port>-->
+               <httpPort>8093</httpPort>
+            </configuration>
          </plugin>
       </plugins>
    </build>
