--- a/snoop-helloworld/pom.xml
+++ b/snoop-helloworld/pom.xml
@@ -30,6 +30,19 @@
          <scope>provided</scope>
       </dependency>
       
+      <!-- Needed until Java EE 8 -->
+      <dependency>
+         <groupId>javax.mvc</groupId>
+         <artifactId>javax.mvc-api</artifactId>
+         <version>1.0-edr2</version>
+      </dependency>
+      <dependency>
+         <groupId>org.glassfish.ozark</groupId>
+         <artifactId>ozark</artifactId>
+         <version>1.0.0-m02</version>
+         <scope>runtime</scope>
+      </dependency>  
+      
       <dependency>
          <groupId>eu.agilejava</groupId>
          <artifactId>snoop-client</artifactId>
