Renamed configuration property for Snoop Service
serviceHost -> snoopService

--- a/snoop-hello/pom.xml
+++ b/snoop-hello/pom.xml
@@ -65,7 +65,7 @@
                   <hello.host>http://192.168.59.103</hello.host>
                   <hello.port>8091</hello.port>
                   <hello.serviceRoot>snoop-hello-service/api</hello.serviceRoot>
-                  <hello.serviceHost>192.168.59.103:8081/snoop-service/</hello.serviceHost>            
+                  <hello.snoopService>192.168.59.103:8081/snoop-service/</hello.snoopService>            
                </env>
                <entryPoint>["/opt/jboss/wildfly/bin/standalone.sh", "-c", "standalone-snoop.xml", "-b", "0.0.0.0"]</entryPoint>
             </configuration>
