--- a/snoop-swarm/src/main/resources/application.yml
+++ b/snoop-swarm/src/main/resources/application.yml
@@ -3,8 +3,8 @@ snoop:
    port: 8093
    serviceRoot: snoop-swarm/api
    
-#   serviceHost: localhost:8080/snoop-service/
-   serviceHost: 192.168.59.103:8081/snoop-service/
+#   snoopService: localhost:8080/snoop-service/
+   snoopService: 192.168.59.103:8081/snoop-service/
 
 eureka:
   client:
