--- a/snoop-world/src/main/resources/application.yml
+++ b/snoop-world/src/main/resources/application.yml
@@ -2,8 +2,8 @@ snoop:
    host: http://localhost
    port: 8080
    serviceRoot: snoop-world-service/api
-#   serviceHost: localhost:8080/snoop-service/
-   serviceHost: 192.168.59.103:8081/snoop-service/
+#   snoopService: localhost:8080/snoop-service/
+   snoopService: 192.168.59.103:8081/snoop-service/
 
 eureka:
   client:
