--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>
 
-   <name>Snoop Examples</name>
+   <name>Snoop Samples</name>
 
    <modules>
       <module>snoop-hello</module>
