--- a/snoop-hello/pom.xml
+++ b/snoop-hello/pom.xml
@@ -33,7 +33,7 @@
       <dependency>
          <groupId>eu.agilejava</groupId>
          <artifactId>snoop</artifactId>
-         <version>1.3.0-SNAPSHOT</version>
+         <version>${snoop.version}</version>
       </dependency>
 
    </dependencies>
