--- a/snoop-swarm/pom.xml
+++ b/snoop-swarm/pom.xml
@@ -26,7 +26,7 @@
       <dependency>
          <groupId>eu.agilejava</groupId>
          <artifactId>snoop-swarm</artifactId>
-         <version>1.3.0-SNAPSHOT</version>
+         <version>${snoop.version}</version>
       </dependency>
       <dependency>
          <groupId>org.wildfly.swarm</groupId>
