--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
    <name>Snoop Samples</name>
    
    <properties>
-      <snoop.version>1.3.0</snoop.version>
+      <snoop.version>1.3.1-SNAPSHOT</snoop.version>
    </properties>
 
    <modules>
