--- a/pom.xml
+++ b/pom.xml
@@ -10,12 +10,14 @@
    
    <properties>
       <snoop.version>1.3.3-SNAPSHOT</snoop.version>
+      <docker.plugin.version>0.4.9</docker.plugin.version>
    </properties>
 
    <modules>
       <module>snoop-hello</module>
       <module>snoop-world</module>
       <module>snoop-swarm</module>
+      <module>snoop-micro</module>
       <module>snoop-helloworld</module>
    </modules>
 
