--- a/snoop-hello/pom.xml
+++ b/snoop-hello/pom.xml
@@ -43,7 +43,7 @@
          <plugin>
             <groupId>com.spotify</groupId>
             <artifactId>docker-maven-plugin</artifactId>
-            <version>0.3.8</version>
+            <version>${docker.plugin.version}</version>
             <configuration>
                <serverId>docker-hub</serverId>
                <imageName>ivargrimstad/${project.artifactId}</imageName>
