--- a/snoop-world/pom.xml
+++ b/snoop-world/pom.xml
@@ -46,7 +46,7 @@
             <version>${docker.plugin.version}</version>
             <configuration>
                <serverId>docker-hub</serverId>
-               <imageName>ivargrimstad/${project.artifactId}</imageName>
+               <imageName>ivargrimstad/${project.artifactId}:jprime</imageName>
                <baseImage>jboss/wildfly:8.2.1.Final</baseImage>
                <maintainer>Ivar Grimstad (ivar.grimstad@gmail.com)</maintainer>
                <resources>
