--- a/pom.xml
+++ b/pom.xml
@@ -1,34 +1,40 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-   <modelVersion>4.0.0</modelVersion>
-   <groupId>eu.agilejava</groupId>
-   <artifactId>snoop-examples</artifactId>
-   <version>1.0.0-SNAPSHOT</version>
-   <packaging>pom</packaging>
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>eu.agilejava</groupId>
+    <artifactId>snoopee-samples</artifactId>
+    <version>2.0.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
 
-   <name>SnoopEE Samples</name>
-   
-   <properties>
-      <snoop.version>1.3.5-SNAPSHOT</snoop.version>
-      <docker.plugin.version>0.4.9</docker.plugin.version>
-   </properties>
+    <name>SnoopEE Samples</name>
 
-   <modules>
-      <module>snoop-hello</module>
-      <module>snoop-world</module>
-      <module>snoop-swarm</module>
-      <module>snoop-micro</module>
-      <module>snoop-helloworld</module>
-   </modules>
+    <properties>
+        <snoopee.version>2.0.0-SNAPSHOT</snoopee.version>
+        <docker.plugin.version>0.4.9</docker.plugin.version>
+    </properties>
 
-   <repositories>
-      <repository>
-         <id>agilejava-snapshots</id>
-         <url>http://nexus.agilejava.eu/content/groups/public</url>
-         <snapshots>
-            <enabled>true</enabled>
-         </snapshots>
-      </repository>
-   </repositories>
+    <modules>
+        <module>snoopee-hello</module>
+        <module>snoopee-world</module>
+        <module>snoopee-swarm</module>
+        <module>snoopee-micro</module>
+        <module>snoopee-helloworld</module>
+    </modules>
+
+    <repositories>
+        <repository>
+            <id>agilejava-snapshots</id>
+            <url>http://nexus.agilejava.eu/content/groups/public</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
+
+    <scm>
+        <connection>scm:git:ssh://git@github.com:ivargrimstad/snoopee-samples.git</connection>
+        <developerConnection>scm:git:ssh://git@github.com:ivargrimstad/snoopee-samples.git</developerConnection>
+        <tag>HEAD</tag> 
+    </scm>
 
 </project>
