--- a/snoopee-helloworld/src/main/resources/snoopee.yml
+++ b/snoopee-helloworld/src/main/resources/snoopee.yml
@@ -1,4 +1,5 @@
 snoopee:
+   serviceName: helloworld
 #   snoopeeService: localhost:8080/snoopee-service/
-   snoopeeService: 192.168.99.100:8081/snoopee-service/
-  
+   snoopeeService: localhost:8081/snoopee-service/
+   
