--- a/snoopee-hello/pom.xml
+++ b/snoopee-hello/pom.xml
@@ -62,10 +62,10 @@
                   </resource>
                </resources>   
                <env>
-                  <hello.host>http://192.168.99.100</hello.host>
+                  <hello.host>http://localhost</hello.host>
                   <hello.port>8091</hello.port>
                   <hello.serviceRoot>snoopee-hello-service/api</hello.serviceRoot>
-                  <hello.snoopeeService>192.168.99.100:8081/snoopee-service/</hello.snoopeeService>            
+                  <hello.snoopeeService>130.190.101.232:8081/snoopee-service/</hello.snoopeeService>            
                </env>
                <entryPoint>["/opt/jboss/wildfly/bin/standalone.sh", "-c", "standalone-snoopee.xml", "-b", "0.0.0.0"]</entryPoint>
             </configuration>
