Clean up and simplify

--- a/snoopee-micro-hello/pom.xml
+++ b/snoopee-micro-hello/pom.xml
@@ -80,7 +80,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <hollow>false</hollow>
+                    <hollow>true</hollow>
                 </configuration>
             </plugin>
         </plugins>
