--- a/snoopee-micro-hello/src/main/resources/snoopee.yml
+++ b/snoopee-micro-hello/src/main/resources/snoopee.yml
@@ -1,8 +1,7 @@
 snoopee:
    host: http://localhost
-   port: 8080
-   serviceRoot: snoopee-micro-service/api
+   port: 8091
+   serviceRoot: /
    
    snoopeeService: localhost:8081/snoopee-service/
 #   snoopeeService: 192.168.99.100:8081/snoopee-service/
-  
