--- a/snoopee-helloworld/pom.xml
+++ b/snoopee-helloworld/pom.xml
@@ -1,59 +1,71 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-   <modelVersion>4.0.0</modelVersion>
-   <groupId>eu.agilejava</groupId>
-   <artifactId>snoopee-helloworld</artifactId>
-   <version>2.0.0-SNAPSHOT</version>
-   <packaging>war</packaging>
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>eu.agilejava</groupId>
+    <artifactId>snoopee-helloworld</artifactId>
+    <version>2.0.0-SNAPSHOT</version>
+    <packaging>war</packaging>
 
-   <name>SnoopEE Samples Hello World Example</name>
+    <name>SnoopEE Samples Hello World Example</name>
 
-   <parent>
-      <groupId>eu.agilejava</groupId>
-      <artifactId>snoopee-samples</artifactId>
-      <version>2.0.0-SNAPSHOT</version>
-   </parent>
+    <parent>
+        <groupId>eu.agilejava</groupId>
+        <artifactId>snoopee-samples</artifactId>
+        <version>2.0.0-SNAPSHOT</version>
+    </parent>
 
-   <properties>
-      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-      <maven.compiler.source>1.8</maven.compiler.source>
-      <maven.compiler.target>1.8</maven.compiler.target>
-      <failOnMissingWebXml>false</failOnMissingWebXml>
-      <netbeans.hint.license>mit</netbeans.hint.license>
-   </properties>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <failOnMissingWebXml>false</failOnMissingWebXml>
+        <netbeans.hint.license>mit</netbeans.hint.license>
+    </properties>
     
-   <dependencies>
-      <dependency>
-         <groupId>javax</groupId>
-         <artifactId>javaee-web-api</artifactId>
-         <version>7.0</version>
-         <scope>provided</scope>
-      </dependency>
+    <dependencies>
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-web-api</artifactId>
+            <version>7.0</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.microprofile</groupId>
+            <artifactId>microprofile</artifactId>
+            <version>1.2</version>
+            <type>pom</type>
+            <scope>provided</scope>
+        </dependency>
       
-      <!-- Needed until Java EE 8 -->
-      <dependency>
-         <groupId>javax.mvc</groupId>
-         <artifactId>javax.mvc-api</artifactId>
-         <version>1.0-edr2</version>
-      </dependency>
-      <dependency>
-         <groupId>org.glassfish.ozark</groupId>
-         <artifactId>ozark</artifactId>
-         <version>1.0.0-m02</version>
-         <scope>runtime</scope>
-      </dependency>  
+        <!-- Needed until Java EE 8 -->
+        <dependency>
+            <groupId>javax.mvc</groupId>
+            <artifactId>javax.mvc-api</artifactId>
+            <version>1.0-pr</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mvc-spec.ozark</groupId>
+            <artifactId>ozark-core</artifactId>
+            <version>1.0.0-m03</version>
+            <scope>runtime</scope>
+        </dependency>  
+        <dependency>
+            <groupId>org.mvc-spec.ozark</groupId>
+            <artifactId>ozark-jersey</artifactId>
+            <version>1.0.0-m03</version>
+            <scope>runtime</scope>
+        </dependency>        
+        <dependency>
+            <groupId>eu.agilejava</groupId>
+            <artifactId>snoopee-client</artifactId>
+            <version>${snoopee.version}</version>
+        </dependency>
       
-      <dependency>
-         <groupId>eu.agilejava</groupId>
-         <artifactId>snoopee-client</artifactId>
-         <version>${snoopee.version}</version>
-      </dependency>
-      
-       <dependency>
-           <groupId>eu.agilejava</groupId>
-           <artifactId>snoopee-config-client</artifactId>
-         <version>${snoopee.version}</version>
-       </dependency>
+        <dependency>
+            <groupId>eu.agilejava</groupId>
+            <artifactId>snoopee-config-client</artifactId>
+            <version>${snoopee.version}</version>
+        </dependency>
      
-   </dependencies>
+    </dependencies>
 </project>
